# faion-network

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  init.sh  statusline-command.sh  tmux-provider  usage.json
.aidocs/agent-methodologies/: README.md  candidates.md  loop-prompt.md  methodologies.jsonl  progress.md  sources.md  state.json  subagent-brief.md
.aidocs/catalog/: PLAN.md
.aidocs/feature-044-pool/: BRIEF.md  TICK.md
.aidocs/feature-045-methodology-xml-migration/: BRIEF.md  TICK.md
.aidocs/feature-046-methodology-decomposition/: BRIEF.md  TICK.md
.aidocs/improvements/: CR-003-incomplete-nextjs-starter.md  CR-004-reuse-storybook-components.md
.aidocs/sdlc-ai-methodologies/: README.md  candidates.md  loop-prompt.md  methodologies.jsonl  progress.md  sources.md  state.json  subagent-brief.md
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
agents/: faion-ads-agent.md  faion-api-agent.md  faion-api-designer-agent.md  faion-api-designer.md  faion-autonomous-agent-builder-agent.md  faion-ba-agent.md  faion-browser-agent.md  faion-code-agent.md  faion-competitor-analyzer.md  faion-content-agent.md  faion-cost-optimizer-agent.md  faion-design-reviewer.md  faion-dev-component-developer.md  faion-dev-design-brainstormer.md  faion-dev-storybook-manager.md  faion-devops-agent.md  faion-domain-checker-agent.md  faion-domain-checker.md  faion-email-agent.md  faion-embedding-agent.md  faion-finetuner-agent.md  faion-frontend-brainstormer-agent.md  faion-frontend-component-agent.md  faion-hallucination-checker-agent.md  faion-hallucination-checker.md  faion-hooks-expert.md  faion-idea-generator.md  faion-image-editor-agent.md  faion-image-generator-agent.md  faion-impl-plan-reviewer.md  faion-landing-agent.md  faion-landing-analyzer.md  faion-landing-copywriter.md  faion-landing-designer.md  faion-llm-cli-agent.md  faion-market-researcher.md  faion-mlp-agent.md  faion-mlp-feature-proposer.md  faion-mlp-gap-finder.md  faion-mlp-impl-planner.md  (+40 more)
agents/archive/: faion-competitor-analyzer-agent.md  faion-cost-optimizer-agent.md  faion-design-reviewer-agent.md  faion-embedding-agent.md  faion-hooks-agent.md  faion-idea-generator-agent.md  faion-image-editor-agent.md  faion-impl-plan-reviewer-agent.md  faion-landing-analyzer-agent.md  faion-landing-copywriter-agent.md  faion-landing-designer-agent.md  faion-llm-cli-agent.md  faion-market-researcher-agent.md  faion-mlp-feature-proposer-agent.md  faion-mlp-gap-finder-agent.md  faion-mlp-impl-planner-agent.md  faion-mlp-spec-analyzer-agent.md  faion-mlp-spec-updater-agent.md  faion-name-generator-agent.md  faion-niche-evaluator-agent.md  faion-pain-point-researcher-agent.md  faion-persona-builder-agent.md  faion-pricing-researcher-agent.md  faion-problem-validator-agent.md  faion-rag-agent.md  faion-seo-agent.md  faion-spec-reviewer-agent.md  faion-stt-agent.md  faion-tasks-reviewer-agent.md
commands/: faion-net.md
docs/: PRIVATE_SKILLS.md  catalog.json  catalog.md  content-plan.md  directory-structure.md  methodology-tag-glossary.xml  methodology-xml-schema.md  product-research-2026.md  skill-authoring.md
docs/cli-tool/: design.md  implementation-plan.md  spec.md
docs/examples/: methodology-reference.xml
hooks/: auto-update.sh  context-compact-gate.py  hooks.json  stop-improver-check.py
rules/: skill-authoring.md
scripts/: apply-domain-merge.py  audit-index-coverage.py  build-domain-index-v2.py  build-methodology-index.py  check-review-tools.sh  f066-validate-all.sh  fix-methodology-phase-d.py  migrate-f067.py  migrate-methodology-to-v2.py  migrate-playbook-to-v2.py  migrate-playbook-yaml-to-xml.py  regen-domains-xml.py  regen-tier-manifest.py  slug-rename-map.json  test-retrieve-2level.py  update.sh  validate-domain-index.py  validate-domains-index.py  validate-methodology-decision-tree.py  validate-methodology-scripts.py  validate-methodology-templates.py  validate-methodology-v2.py  validate-methodology-xml.py  validate-playbook-taxonomy.py  validate-playbook-v2.py  validate-playbook-v3.py  validate-tier-playbook.py  validate-workflow-v2.py
scripts/lib/: AGENTS.md  integrity-check.sh  snapshot.sh
skills/: CLAUDE.md  GEMINI.md  meta-schema.json  tier-manifest.json
skills/_archived/: CLAUDE.md
skills/archive/: CLAUDE.md
skills/brainstorm/: CLAUDE.md  SKILL.md
skills/faion-accessibility-specialist/: SKILL.md  accessibility-first-design.md  ai-spatial-computing.md  recognition-over-recall.md  spatial-accessibility.md  vui-accessibility-inclusivity.md  wcag-22-compliance.md
skills/faion-ai-agents/: CLAUDE.md  SKILL.md  agent-patterns.md  langchain-chains.md  langchain-memory.md  langchain-workflows.md  llamaindex-agents-eval.md  mcp-model-context-protocol.md  multi-agent-patterns.md
skills/faion-analytics-skill/: SKILL.md
skills/faion-api-developer/: CLAUDE.md  SKILL.md  api-contract-first.md  api-error-handling.md  api-gateway-patterns.md  api-graphql.md  api-openapi-spec.md  api-rest-design.md  api-testing.md  api-versioning.md  (+1 more)
skills/faion/knowledge/backend/python-modern-2026/templates/: .python-version  pyproject.toml
skills/faion/knowledge/dev/python/templates/: pyproject.toml
skills/faion/knowledge/free/dev/python-developer/python-basics/templates/: bootstrap.sh  pyproject.toml  pyproject.toml.fragment
skills/faion/knowledge/free/dev/python-developer/python-modern-2026/templates/: bootstrap.sh  pyproject.toml
skills/faion/knowledge/free/dev/software-developer/python-poetry-setup/templates/: Dockerfile  pyproject.toml
skills/faion/knowledge/geek/sdlc-ai/pyproject-single-source/templates/: check-no-legacy.sh  pyproject.toml
skills/faion/knowledge/sdlc-ai/uv-lockfile-floor/templates/: agents-md-snippet.md  pyproject.toml
skills/faion/knowledge/solo/dev/automation-tooling/practices-python-ecosystem/templates/: .pre-commit-config.yaml  ci.yml  py-typed  pyproject.toml
skills/faion/knowledge/solo/dev/software-developer/rust-tokio-async/templates/: Cargo.toml  batch-processor.rs  main.rs  user-service.rs
tests/: test_snapshot.sh
(+51242 files in other folders)
