# purpose: Complete pyproject for 3.13: [project], [tool.uv], [tool.ruff], [tool.mypy], [tool.pytest.ini_options].
# consumes: 01-core-rules.xml
# produces: config
# depends-on: content/01-core-rules.xml
# token-budget-impact: small

[project]
name = "demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.7"
mypy = "^1.11"

[tool.poetry]
virtualenvs = { in-project = true }

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
