# purpose: TBD-template-header
# consumes: input from methodology
# produces: output artefact
# depends-on: 01-core-rules.xml
# token-budget-impact: small

# Minimal Poetry pyproject.toml — adjust name, description, and deps.
[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Add: django = "^5.0" or fastapi = "^0.115"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
