# purpose: pyproject.toml skeleton with [project] + [tool.uv] sections.
# consumes: see content/02-output-contract.xml inputs
# produces: artefact conforming to content/02-output-contract.xml
# depends-on: content/01-core-rules.xml + content/04-procedure.xml
# token-budget-impact: ~200-1200 tokens when loaded as context

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-pkg"
version = "0.1.0"
description = "uv-managed project skeleton."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.15",
  "hypothesis>=6.150",
  "pytest-cov>=5.0",
]

[tool.uv]
managed = true
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "T20"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
