[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-pkg"
version = "0.1.0"
description = "Single-source pyproject.toml example."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "ruff>=0.15",
  "hypothesis>=6.150",
  "bandit>=1.8",
  "mutmut>=3.0",
]

[tool.uv]
managed = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-markers --strict-config --tb=short --cov=src --cov-branch --cov-fail-under=85"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
skips = []
exclude_dirs = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/"
runner = "uv run pytest -x -q"
tests_dir = "tests/"
