[project]
name = "my-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"  # Keep in sync with requires-python

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade — auto-upgrades deprecated typing syntax
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "T20", # no print()
]
ignore = [
    "S101",  # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]

[tool.ruff.format]
quote-style = "double"

# ─── mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"  # Keep in sync with requires-python
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── pyright ─────────────────────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"  # Keep in sync with requires-python
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# ─── pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"  # pytest-asyncio: auto-detect async tests
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: slow-running tests",
    "integration: integration tests hitting external services",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
