# purpose: Cargo manifest snippet declaring Tokio features.
# consumes: see content/02-output-contract.xml inputs for rust-tokio-async
# produces: artefact conforming to content/02-output-contract.xml
# depends-on: content/01-core-rules.xml + content/04-procedure.xml
# token-budget-impact: ~200-700 tokens when loaded as context

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
